force-app/main/default/objects/Loan_Invitation__c/Loan_Invitation__c.object-meta.xml
<CustomObject>
    <label>Loan Invitation</label>
    <nameField>
        <label>Loan Invitation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Invitations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>