force-app/main/default/objects/Loan_Invitation__c/fields/Applicant_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Type of applicant once they accept the invitation.</description>
    <label>Applicant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APPLICANT_TYPE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>APPLICANT_TYPE_BORROWER</fullName>
                <label>Borrower</label>
            </value>
            <value>
                <fullName>APPLICANT_TYPE_GUARANTOR</fullName>
                <label>Guarantor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>