force-app/main/default/objects/Loan_Invitation__c/fields/Invitation_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Expiry_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>The time this resource expires.</description>
    <label>Invitation Expiry Date</label>
    <type>DateTime</type>
</CustomField>