force-app/main/default/objects/Loan_Invitation__c/fields/Invitation_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Invitation_External_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Primary unique identifier of the Invitation resource.</description>
    <label>Invitation External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>