force-app/main/default/objects/Loan_Invitation__c/fields/Invitation_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Last_Updated_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>The time this resource was updated.</description>
    <label>Invitation Last Updated Date</label>
    <type>DateTime</type>
</CustomField>