force-app/main/default/objects/Loan_Invitation__c/fields/Invitation_Status__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Possible invitation status.</description>
    <label>Invitation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INVITATION_STATE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>INVITATION_STATE_INVITED</fullName>
                <label>Invited</label>
            </value>
            <value>
                <fullName>INVITATION_STATE_CANCELLED</fullName>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>INVITATION_STATE_ACCEPTED</fullName>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>INVITATION_STATE_DECLINED</fullName>
                <label>Declined</label>
            </value>
            <value>
                <fullName>INVITATION_STATE_EXPIRED</fullName>
                <label>Expired</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>