force-app/main/default/objects/Loan_Invitation__c/fields/Invitee_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Invitee_Mobile_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>A mobile number so that we can invite this customer to join the application. Format will be stored and returned as &apos;00614xxxxxxxx&apos;</description>
    <label>Invitee Mobile Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>