force-app/main/default/objects/Loan_Invitation__c/fields/Inviter_Legal_name__c.field-meta.xml
<CustomField>
    <fullName>Inviter_Legal_name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Sender legal Name</description>
    <label>Inviter Legal name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>