force-app/main/default/objects/Loan_Invitation__c/fields/Loan_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Loan_Applicant__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Invitation Sender</description>
    <label>Loan Applicant</label>
    <referenceTo>LoanApplicant</referenceTo>
    <relationshipLabel>Loan Invitations</relationshipLabel>
    <relationshipName>Loan_Invitations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>