force-app/main/default/objects/Loan_Invitation__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to loan application</description>
    <label>Loan Application</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>Loan Invitations</relationshipLabel>
    <relationshipName>Loan_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>