force-app/main/default/objects/Loan_Invitation__c/validationRules/UpdateTimeCannotBeOlder.validationRule-meta.xml
<ValidationRule>
    <fullName>UpdateTimeCannotBeOlder</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false , Invitation_Last_Updated_Date__c &lt;  PRIORVALUE(Invitation_Last_Updated_Date__c))</errorConditionFormula>
    <errorDisplayField>Invitation_Last_Updated_Date__c</errorDisplayField>
    <errorMessage>Last Updated Date cannot be older than the current value</errorMessage>
</ValidationRule>